# Job-Hunt

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  setup.py
docs/: AGENTS.md  Status.md  docs.md  improvements.md
src/: __init__.py  config.py  models.py
src/agents/: __init__.py  dashboard.py  data_engineer.py  evaluator.py  scraper.py
